# gtf.io

./: .drone.yml  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Jenkinsfile  LICENSE  MARKUP.md  Makefile  README.md  cabal.project  config.toml  config.yaml  flake.nix  fourmolu.yaml  gtf-website.cabal
app/: Main.hs
app/draft-server/: Main.hs
app/draft-server/GTF/DraftServ/: Github.hs
app/preview/: Main.hs
app/preview/GTF/LivePreview/: LiveReload.hs  Options.hs  PreviewServer.hs
content/: _index.md
content/musings/coding-in-haskell-a-new-adventure/: index.md
content/musings/content-creativity-monetisation/: index.md
content/musings/content-creativity-monetisation/data/: requirements.txt
content/musings/creativity-anarchy-internet/: _notes.md  index.md
content/musings/creativity-anarchy-internet/data/: requirements.txt
content/musings/deus-ex-techna/: index.md
content/musings/developer-tools-considered-harmful/: index.md
content/musings/dna-and-surveillance-capitalism/: index.md
content/musings/js-promises-as-monads/: index.md
content/musings/moving-away-from-google-email/: index.md
content/projects/: boggle-solver.md  eye-for-an-eye.md  gtf_io_website.md  markov-text-generator.md
content/projects/eye-for-an-eye/: index.md
content/projects/grasana/: index.md
content/projects/personal_infrastructure/: index.md
content/projects/personal_infrastructure/system-diagram.shapesdoc/: composition_data.plist
content/projects/x-ray-jets-solar-atmosphere/: index.md
content_backup/content/musings/content-creativity-monetisation/data/: iab-revenues.py
content_backup/content/musings/developer-tools-considered-harmful/: index.md
content_backup/content/musings/dna-and-surveillance-capitalism/: index.md
content_backup/content/projects/: gtf_io_website.md  markov-text-generator.md
content_backup/content/projects/personal_infrastructure/: index.md
content_backup/themes/gtf.io/assets/styles/: main.scss
content_backup/themes/gtf.io/layouts/: index.html
content_backup/themes/gtf.io/layouts/musings/: single.html
content_backup/themes/gtf.io/layouts/partials/: bibliography.html  head.html  header.html  menu.html  short_bio.html
content_backup/themes/gtf.io/layouts/projects/: list.html  single.html
content_backup/themes/gtf.io/layouts/shortcodes/: cite.html  footnotes.html
src/: CommonPrelude.hs
src/GTF/: Assets.hs  Router.hs  URL.hs
src/GTF/Content/: Doc.hs  Loader.hs  Meta.hs  Musings.hs  Projects.hs
src/GTF/Pages/: Colophon.hs  Error.hs  Helpers.hs  Home.hs  Layout.hs  Musings.hs  Projects.hs
src/GTF/Pages/Musings/content/: coding-in-haskell-a-new-adventure.djot  deus-ex-techna.djot  developer-tools-considered-harmful.djot  dna-and-surveillance-capitalism.djot  js-promises-as-monads.djot  moving-away-from-google-email.djot  test.djot  why-haskell.djot
src/GTF/Pages/Musings/content/content-creativity-monetisation/: article.djot
src/GTF/Pages/Partials/: Footer.hs  Highlight.hs  Nav.hs  TableOfContents.hs
src/GTF/Pages/Projects/content/: boggle-solver.djot  live-preview-server.djot  markov-text-generator.djot
src/GTF/Pages/Projects/content/eye-for-an-eye/: project.djot
src/GTF/Pages/Projects/content/grasana/: project.djot
src/GTF/Pages/Projects/content/l-systems/: project.djot
src/GTF/Pages/Projects/content/l-systems/assets/: LSystems.hs
src/GTF/Pages/Projects/content/leviathan/: project.djot
src/GTF/Pages/Projects/content/personal-infrastructure/: project.djot
src/GTF/Pages/Projects/content/x-ray-jets-solar-atmosphere/: project.djot
src/GTF/Style/: DraftTools.hs  Helpers.hs  Home.hs  Lists.hs  Main.hs  Nav.hs  Projects.hs
static/: gideon-farrell.pubkey.asc
test/GTF/Content/: MetaSpec.hs  MusingsSpec.hs  ProjectsSpec.hs
themes/gtf.io/: theme.toml
themes/gtf.io/archetypes/: musings.md  projects.md
themes/gtf.io/assets/styles/: footnotes.scss  home.scss  lists.scss  main.scss  single.scss
themes/gtf.io/layouts/: index.html
themes/gtf.io/layouts/_default/: baseof.html
themes/gtf.io/layouts/musings/: list.html  single.html
themes/gtf.io/layouts/partials/: footer.html  head.html  menu.html  short_bio.html
themes/gtf.io/layouts/projects/: list.html  single.html
themes/gtf.io/layouts/shortcodes/: bibliography.html  cite.html  fig.html  footnote.html  footnotes.html
